--- a/Index.html
+++ b/Index.html
@@ -20,8 +20,7 @@
     </header>
 </body>
 <footer>
-    <p>&copy; 2023 Ryan Silva | Georgetown University
-    </p>
+    <p>&copy; 2023 Ryan Silva | Georgetown University </p>
   </footer>
 </html>
 
