--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,19 @@
     </nav>
     </header>
 </body>
-<footer>
-    <p>&copy; 2023 Ryan Silva | Georgetown University </p>
-  </footer>
+    <footer>
+        <p>&copy; 2023 Ryan Silva | Georgetown University </p>
+    </footer>
+
+    <script type="text/javascript">
+
+        //
+        // FYI: this is JavaScript!
+        //
+        var myMessage = "Hello World"
+        console.log(myMessage)
+
+
+    </script>
 </html>
 
