--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 </body>
     <footer>
-        <p>&copy; 2023 Ryan Silva | Georgetown University </p>
+        <p>&copy; 2023 Ryan Silva | Georgetown University (69)</p>
     </footer>
 
     <script type="text/javascript">
